--- a/angular.json
+++ b/angular.json
@@ -1,16 +1,16 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "chepri-test1": {
+    "ngrx-demo2": {
       "projectType": "application",
       "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        },
         "@schematics/angular:application": {
-          "strict": true
+          "strict": false
         }
       },
       "root": "",
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/chepri-test1",
+            "outputPath": "dist/ngrx-demo2",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -31,7 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -68,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "chepri-test1:build"
+            "browserTarget": "ngrx-demo2:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "chepri-test1:build:production"
+              "browserTarget": "ngrx-demo2:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "chepri-test1:build"
+            "browserTarget": "ngrx-demo2:build"
           }
         },
         "test": {
@@ -116,16 +117,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "chepri-test1:serve"
+            "devServerTarget": "ngrx-demo2:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "chepri-test1:serve:production"
+              "devServerTarget": "ngrx-demo2:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "chepri-test1"
+  "defaultProject": "ngrx-demo2"
 }
