--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chepri-test1",
+  "name": "ngrx-demo2",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,6 +19,12 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@ngrx/effects": "^10.1.2",
+    "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
+    "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
